examples/negative/effects/row_carrier_unbound.kai
# Issue #773 — a nominal type whose ctor field uses an effect-row
# variable the type never declares as a tparam. `e` appears after `/`
# inside the field but is absent from `[t]`, so it is unbound. Before the
# fix the scheme builder panicked in `tpbind_id_of`; now the typer
# rejects it with an unbound-row-var diagnostic that points the user at
# declaring the row var (`[t, e]`).

pub type Q[t] = Qq((t) -> Unit / e)

fn main() : Unit = ()
